# nauman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JOB_SYNTAX.md  README.md  cliff.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
example/: test.yml
examples/: env-vars.yml  health-checks.yml  hello-world.yml  logging.yml  multi-shell.yml  outputs.yml  rockstar.yml
src/: common.rs  config.rs  execution.rs  flow.rs  lib.rs  logging.rs  main.rs  output.rs  pprint.rs  utils.rs
src/logging/: builder.rs  logger.rs  mod.rs  pprint.rs  spec.rs  stream.rs
