[package]
name = "nauman"
version = "1.0.0"
edition = "2021"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
description = "A CI inspired approach for local job automation"
readme = "README.md"
repository = "https://github.com/EgorDm/nauman/"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "task", "runner", "development", "utility"]
exclude = [".github"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
heck = "0.3.3"
anyhow = "1.0"
nix = "0.23"
colored = "2"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
clap = "3.0.0-beta.4"