[package]
name = "nauman"
version = "1.1.1"
edition = "2021"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
description = "A CI inspired approach for local job automation"
readme = "README.md"
repository = "https://github.com/EgorDm/nauman/"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "task", "runner", "development", "utility"]
exclude = [".github"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
heck = "0.3.3"
anyhow = "1.0"
nix = "0.23"
colored = "2"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
clap = { version = "3.0.0-beta.4", features = ["derive"] }
dotenv = "0.15.0"
rand = { version = "0.8.4", features = ["small_rng"] }
prettytable-rs = "^0.8"

[profile.release]
lto = true